--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div id='content'>
-        <h3>You have requested a page that does not exist.</h3>
+        You have requested a page that does not exist.
         <div class='clearfix'></div>
       </div>
     </div>
