time to close the blog

--- a/_layouts/master.html
+++ b/_layouts/master.html
@@ -18,7 +18,7 @@
         <div id='menu'>
           <ul>
             <li><a id="about_link" title="About" href="/about.html">About</a></li>
-            <li><a href='http://blog.theagiledeveloper.com' id='blog_link' title='Blog'>Blog</a></li>
+            <!-- <li><a href='http://blog.theagiledeveloper.com' id='blog_link' title='Blog'>Blog</a></li> -->
             <li><a href='http://github.com/mdeiters' target='_blank' title='GitHub' rel='me' id='github_link'>GitHub</a></li>
             <li><a href='http://www.linkedin.com/in/matthewdeiters' title='LinkedIn' target='_blank' rel='me' id='linkedin_link'>LinkedIn</a></li>
             <li><a href='http://twitter.com/mdeiters' title='Twitter' target='_blank' rel='me' id='twitter_link'>Twitter</a></li>
